--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://github.com/jormondroyd27/RoboFriends"
+                  href="https://jormondroyd27.github.io/robofriends/"
                 >
                   See Live
                 </a>
@@ -184,7 +184,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/jormondroyd27/RoboFriends"
                 >
                   Source Code
                 </a>
